fix: overflow issue

--- a/christmas-shop/style.css
+++ b/christmas-shop/style.css
@@ -58,6 +58,7 @@ body {
 .footer {
   max-width: 1440px;
   margin: 0 auto;
+  overflow: hidden;
   /* overflow-y: hidden; */
 }
 
